--- a/public/templates/view-companies-tpl.html
+++ b/public/templates/view-companies-tpl.html
@@ -4,13 +4,13 @@
   <div class="row">
   <div class="container col-lg-6 col-md-offset-1">
     <ul ng-repeat = "(key, val) in cg.groups" class = "list-group">
-      <li ng-click = 'showGroups = !showGroups'class = "list-group-item"><a>{{key}}</a>
+      <li ng-show = 'cg.hideEmpty(key)'ng-click = 'showGroups = !showGroups'class = "list-group-item"><a>{{key}}</a>
         <span ng-show = 'showGroups'class = 'glyphicon glyphicon-chevron-up pull-right'></span>
         <span ng-hide = 'showGroups'ng-click = 'showGroups = true'class = 'glyphicon glyphicon-chevron-down pull-right'></span>
       </li>
       <h6 ng-show = 'showGroups'>Groups</h6>
       <ul type = 'square'ng-show= 'showGroups'ng-repeat = "(subKey,subVal) in val">
-        <li ng-click = 'showKeys = !showKeys' class = 'list-group-item'><a>{{subKey}}</a>
+        <li ng-click = 'showKeys = !showKeys'ng-show = "cg.showSubGroup(subVal)" class = 'list-group-item'><a>{{subKey}}</a>
           <span ng-show = 'showKeys'class = 'glyphicon glyphicon-chevron-up pull-right'></span>
           <span ng-hide = 'showKeys'ng-click = 'showKeys = true'class = 'glyphicon glyphicon-chevron-down pull-right'></span>
         </li>
