--- a/public/templates/login-tpl.html
+++ b/public/templates/login-tpl.html
@@ -1,3 +1,64 @@
-<div class="login-page">
-  <h1>Login Page</h1>
-</div>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>GDG Login</title>
+</head>
+<body>
+  <style>
+    body {
+      padding-top: 40px;
+      padding-bottom: 40px;
+      background-color: #eee;
+    }
+
+    .form-signin {
+      max-width: 330px;
+      padding: 15px;
+      margin: 0 auto;
+    }
+    .form-signin .form-signin-heading,
+    .form-signin .checkbox {
+      margin-bottom: 10px;
+    }
+    .form-signin .checkbox {
+      font-weight: normal;
+    }
+    .form-signin .form-control {
+      position: relative;
+      height: auto;
+      -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+              box-sizing: border-box;
+      padding: 10px;
+      font-size: 16px;
+    }
+    .form-signin .form-control:focus {
+      z-index: 2;
+    }
+    .form-signin input[type="email"] {
+      margin-bottom: -1px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    .form-signin input[type="password"] {
+      margin-bottom: 10px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+  </style>
+  <div class="container">
+    <form class="form-signin">
+      <h2 class="form-signin-heading">Sign in with your gdg.do credentials</h2>
+      <label for="username" class="sr-only">Email address</label>
+      <input type="email" ng-model = "username"name="username" class="form-control"
+        placeholder="Email address" required="" autofocus="">
+      <label for="password" class="sr-only">Password</label>
+      <input type="password" ng-model = "password"name="password" class="form-control"
+        placeholder="Password" required="">
+      <button class="btn btn-lg btn-primary btn-block" ng-click = "login()"submit">
+        Sign in
+      </button>
+    </form>
+  </div>
+</body>
