--- a/public/templates/main-tpl.html
+++ b/public/templates/main-tpl.html
@@ -1,23 +1,34 @@
-<div ng-controller = "MainController as vm"class="jumbotron">
-  <a class = 'text-center' ng-href="#/companies"><span style="font-size:2em; color:black"class = 'glyphicon glyphicon-home'></span></a>
-  <h1>Groups</h1>
-  <div class="row">
-  <div class="col-lg-6 col-md-offset-1">
-    <div class="input-group">
-      <input type="text" ng-model = 'vm.searchParams'class="form-control" placeholder="Search for terms...">
-      <span class="input-group-btn">
-        <button class="btn btn-default" ng-click = 'vm.searchTerms()'type="button">Go!</button>
-        <button class="btn btn-default" ng-click = 'vm.clearSearch()'type="button"><span class = 'glyphicon glyphicon-remove'></span></button>
-      </span>
-    </div><!-- /input-group -->
-    <a ng-href="#/view_term/{{vm.searchResults}}">
-      <h3 ng-repeat = 'item in vm.searchResults'> {{item}}</h3>
+<div ng-controller = "LoginController">
+  <h1  class = "col-md-offset-1">
+    <a ng-href="#/companies">
+      <span class = 'glyphicon glyphicon-home'></span>
     </a>
-  </div><!-- /.col-lg-6 -->
-  <div class="col-lg-6">
-  </div><!-- /.col-lg-6 -->
+    <a ng-click = "logOut()">
+      <span class = "glyphicon glyphicon-log-out"></span>
+    </a>
+  </h1>
 </div>
-<br><a href="#"></a>
+<div ng-controller = "MainController as vm"class="jumbotron">
+  <h1 class = 'col-md-offset-1'>
+    Groups
+    <span ng-controller = "CompanyController as cc"ng-click = "cc.modalTerm(null,null)" class = "glyphicon glyphicon-plus"></span>
+  </h1>
+  <br>
+  <div class="input-group col-lg-6 col-md-offset-1">
+    <input ng-keyup="$event.keyCode == 13 && vm.searchTerms()"type="text" ng-model = 'vm.searchParams'class="form-control" placeholder="Search for terms...">
+    <span class="input-group-btn">
+      <button class="btn btn-default" ng-click = 'vm.searchTerms()'type="button">Go!</button>
+      <button class="btn btn-default" ng-click = 'vm.clearSearch()'type="button"><span class = 'glyphicon glyphicon-remove'></span></button>
+    </span>
+  </div><!-- /input-group -->
+  <h2 class = "col-md-offset-1"ng-show = 'vm.searchError'>No Results</h2>
+  <div  class = "col-md-offset-1"ng-repeat = "item in vm.searchResults">
+    <h2>
+      <a ng-href="#/view_term/{{item.key}}">{{item.group}}.{{item.key}}</a>
+    </h2>
+  </div>
+</div>
+<div class = "col-md-offset-1"ng-controller = "MainController as vm"class="row">
   <div class="container col-lg-6">
     <ul ng-repeat = "(key,val) in vm.groups" class = "list-group">
       <li ng-click = 'showKeys = !showKeys'class = "list-group-item"><a>{{key}}</a>
@@ -30,5 +41,4 @@
       </ul>
     </ul>
   </div>
-
 </div>
