--- a/public/templates/companies-tpl.html
+++ b/public/templates/companies-tpl.html
@@ -22,7 +22,7 @@
   </div>
   <div ng-controller = 'CompanyController as cc'class="col-md-6 col-md-offset-3">
     <ul class = 'list-group 'ng-repeat = 'company in cc.companies'>
-      <li ng-click = 'cc.seeCompany(company)'class = 'list-group-item '><a ng-href="#/view_company/{{company.id}}"><h3>{{company.id}} {{company.name}}</h3></a></li>
+      <li ng-click = 'cc.seeCompany(company)'class = 'list-group-item '><a ng-href="#/view_company/{{company.id}}/{{company.name}}"><h3>{{company.id}} {{company.name}}</h3></a></li>
     </ul>
     <ul class = 'list-group'>
       <li ng-click = 'cc.goMain()'class = 'list-group-item'><a href="#/main"><h3>See All</h3></a></li>
