--- a/public/templates/companies-tpl.html
+++ b/public/templates/companies-tpl.html
@@ -20,7 +20,7 @@
     </h1>
     <h6 class = 'col-md-offset-4' >Add A Term</h6>
   </div>
-  <div ng-controller = 'CompanyController as cc'class="col-md-6 col-md-offset-3">
+  <div ng-init="cc.init()" ng-controller = 'CompanyController as cc'class="col-md-6 col-md-offset-3">
     <ul class = 'list-group 'ng-repeat = 'company in cc.companies'>
       <li ng-click = 'cc.seeCompany(company)'class = 'list-group-item '><a ng-href="#/view_company/{{company.id}}/{{company.name}}"><h3>{{company.id}} {{company.name}}</h3></a></li>
     </ul>
