--- a/public/templates/view-term-tpl.html
+++ b/public/templates/view-term-tpl.html
@@ -1,6 +1,6 @@
 <div ng-controller = "LoginController">
   <h1  class = "col-md-offset-1">
-    <a ng-href="#/companies">
+    <a ng-href="#/main">
       <span class = 'glyphicon glyphicon-home'></span>
     </a>
     <a ng-click = "logOut()">
