--- a/public/templates/main-tpl.html
+++ b/public/templates/main-tpl.html
@@ -8,7 +8,8 @@
     </a>
   </h1>
 </div>
-<div ng-controller = "MainController as vm"class="jumbotron">
+<div ng-init = "vm.init()"ng-controller = "MainController as vm">
+<div class="jumbotron">
   <h1 class = 'col-md-offset-1'>
     Groups
     <span ng-controller = "CompanyController as cc"ng-click = "cc.modalTerm(null,null)" class = "glyphicon glyphicon-plus"></span>
@@ -28,7 +29,7 @@
     </h2>
   </div>
 </div>
-<div ng-init = "vm.init()"class = "col-md-offset-1"ng-controller = "MainController as vm"class="row">
+<div class = "col-md-offset-1"class="row">
   <div class="container col-lg-6">
     <ul ng-repeat = "(key,val) in vm.groups" class = "list-group">
       <li ng-click = 'showKeys = !showKeys'class = "list-group-item"><a>{{key}}</a>
@@ -41,4 +42,5 @@
       </ul>
     </ul>
   </div>
+</div>
 </div>
