--- a/public/templates/view-company-term-tpl.html
+++ b/public/templates/view-company-term-tpl.html
@@ -1,6 +1,6 @@
 <div ng-controller = "LoginController">
   <h1  class = "col-md-offset-1">
-    <a ng-controller = "CompanyTermController as ct"ng-href="#/view_company/{{ct.clientId}}">
+    <a ng-controller = "CompanyTermController as ct"href="#/companies">
       <span class = 'glyphicon glyphicon-home'></span>
     </a>
     <a ng-click = "logOut()">
