--- a/public/templates/deploy-cloud-tpl.html
+++ b/public/templates/deploy-cloud-tpl.html
@@ -11,7 +11,12 @@
               <h1>
                 <a class = "btn btn-danger" ng-click = "writeAll(); myVar = !myVar" ng-disabled = 'myVar'>
                   <span class = "glyphicon glyphicon-cloud"></span>
-                  Deploy</a>
+                  Deploy All
+                </a>
+                <a class = "btn btn-danger" ng-click = "writeCustom(); myVar = !myVar" ng-disabled = 'myVar'>
+                  <span class = "glyphicon glyphicon-cloud"></span>
+                  Deploy Custom
+                </a>
               </h1>
               <h3 ng-show = "deployComplete">
                 All Files Uploaded To Amazon!
