--- a/public/templates/deploy-cloud-tpl.html
+++ b/public/templates/deploy-cloud-tpl.html
@@ -9,13 +9,14 @@
               <h1>AWS Upload</h1>
               <uib-progressbar max="awsMax" value="awsDynamic"><span style="color:white; white-space:nowrap;">{{awsDynamic}} / {{awsMax}}</span></uib-progressbar>
               <h1>
-                <a class = "btn btn-danger" ng-click = "writeAll(); myVar = !myVar" ng-disabled = 'myVar'>
+                <!-- <a class = "btn btn-danger" ng-click = "writeAll(); myVar = !myVar" ng-disabled = 'myVar'>
                   <span class = "glyphicon glyphicon-cloud"></span>
                   Deploy All
-                </a>
+                </a> -->
+                <!-- Deploy Custom -->
                 <a class = "btn btn-danger" ng-click = "writeCustom(); myVar = !myVar" ng-disabled = 'myVar'>
                   <span class = "glyphicon glyphicon-cloud"></span>
-                  Deploy Custom
+                  Deploy
                 </a>
               </h1>
               <h3 ng-show = "deployComplete">
