--- a/public/templates/companies-tpl.html
+++ b/public/templates/companies-tpl.html
@@ -8,10 +8,10 @@
         <span>Upload</span><br>
         <span  class = "glyphicon glyphicon-upload"></span>
       </p>
-      <p ng-click = "cc.deployCloud(cc.companiesReady)"class = "col-md-1 text-center">
+      <!-- <p ng-click = "cc.deployCloud(cc.companiesReady)"class = "col-md-1 text-center">
         <span>Deploy</span><br>
         <span class = "glyphicon glyphicon-cloud-upload"></span>
-      </p>
+      </p> -->
   </div>
   <div class="jumbotron">
     <h1 class = 'col-md-offset-1'>
