changes to search

--- a/public/templates/modal-term-tpl.html
+++ b/public/templates/modal-term-tpl.html
@@ -32,6 +32,7 @@
       <option>de-DE</option>
       <option>en-GB</option>
       <option>es-SP</option>
+      <option>fr-FR</option>
       <option>it-IT</option>
       <option>nl-NL</option>
       <option>pt-BR</option>
